@@ -1,3 +1,4 @@
+Fraction Matcher: Moved the mixed numbers a bit lower in the pan
 Fraction Matcher: On the mixed number tab, always use a scale factor for level 7 and 8
 Fraction Matcher: On the mixed number tab, show mixed numbers only (never show improper fractions)
 Build a Fraction: Added a "refresh" button, not wired up
